--- a/Sources/OnboardingKit/Resources/Localizable.xcstrings
+++ b/Sources/OnboardingKit/Resources/Localizable.xcstrings
@@ -2,13 +2,27 @@
   "sourceLanguage" : "en",
   "strings" : {
     "404 Error" : {
-
+      "shouldTranslate" : false
     },
     "Close" : {
-
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Schliessen"
+          }
+        }
+      }
     },
     "Continue" : {
-
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Fortsetzen"
+          }
+        }
+      }
     },
     "continue_button" : {
       "extractionState" : "manual",
@@ -32,7 +46,7 @@
       "localizations" : {
         "de" : {
           "stringUnit" : {
-            "state" : "needs_review",
+            "state" : "translated",
             "value" : "%@ erfasst Ihre Aktivitäten, die nicht mit Ihrer Apple-ID verknüpft sind. "
           }
         },
@@ -62,14 +76,21 @@
       }
     },
     "Page Not Found" : {
-
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Seite nicht gefunden"
+          }
+        }
+      }
     },
     "welcome_to" : {
       "extractionState" : "manual",
       "localizations" : {
         "de" : {
           "stringUnit" : {
-            "state" : "needs_review",
+            "state" : "translated",
             "value" : "Willkommen bei"
           }
         },
